# kuali-docs-mcp

./: .gitignore  README.md  build.mjs  manifest.json  package-lock.json  package.json  pyproject.toml  test-create-folder.mjs
.github/workflows/: release.yml
src/: google.ts  index.ts  markdown.ts
src/kuali_docs_mcp/: google.py  markdown.py  server.py
